--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,9 +7,32 @@
 }
 
 html {
-  font-size: 62.5%; /*calculate to 10px from 16px default browser font size*/
+  font-size: 62.5%; /* calculate to 10px from 16px default browser font size, 1 rem = 10px; 10px/16px = 62.5% */
+
+ 
+  @include respond(tab-land) { // width < 1200
+    font-size: 56.25%; // 1rem = 9px, 9/16 = 56.25%
+  }
+
+  @include respond(tab-port) { // width < 900
+    font-size: 50%; // 1rem = 8px, 8/16 = 50%
+  }
+
+  // @include respond(phone) { // width < 600
+  //   font-size: 30%; // 1rem = 4.8px, 4.8/16
+  // }
+
+  @include respond(big-desktop) { // width > 1800
+    font-size: 75%; // 1rem = 12px, 12/16 = 75%
+  }
+
 }
 
 body {
     box-sizing: border-box;
+    padding: 3rem;
+
+    @include respond(tab-port) { // width < 900
+      padding: 0;
+    }
 }
