--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -184,7 +184,10 @@
     font-weight: 100;
   }
 
-  @include respond(tab-port) {
+  //@include respond(tab-port) {
+  @media only screen and (max-width: 56.25em),
+    only screen and (hover:none) {  // (hover:none) opposite to (hover:hover)
+
     height: auto;
     border-radius: 3px;
     background-color: $color-white;
